--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
     <style>
         @media only screen and (max-width: 500px) {
             #clock {
-               font-size: 6px;
+                font-size: 6px;
             }
         }
     </style>
 </head>
 
-<body class="bg-rose-700 ">
-    <div id="clock" class="bg-teal-900 rounded-full w-96 pt-24 pb-24 m-auto text-bold text-5xl text-center mt-48">
-        <span>00</span>:
-        <span>00</span>:
-        <span>00</span>
-        <span>AM</span>
-    </div>
-    
-
+<body class="bg-black  text-center text-bold">
+    <h1 class="text-8xl text-blue-900">Digital Clock</h1>
+    <div id="clock" class="text-lime-500 bg-black shadow-blue-950 shadow-2xl rounded w-96 pt-24 pb-24 m-auto text-6xl mt-12">00:00:00
+        AM</div>
 </body>
 <script src="app.js"></script>
+
 </html>
